...
    coordinate: {
      latitude: 45.496673,
      longitude: -73.581409,
    },
  },
  {
    name: "Henry F. Hall",
    coordinate: {
      latitude: 45.497092,
      longitude: -73.5788,
    },
  },
  {
...
    coordinate: {
      latitude: 45.459026,
      longitude: -73.638606,
    },
  },
  {
    name: "Vanier Extension",
    coordinate: {
      latitude: 45.459026,
      longitude: -73.638606,
    },
  },
];
...
